fix sermon meta spacing issue

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2991,7 +2991,7 @@ ul.subscribe {
 }
 
 .wpfc_sermon {
-    &_wrap { margin-bottom: 2em; }
+    &_meta { margin-bottom: 2em; }
 
     &-audio { max-width: 100% !important; }
 
